# ros2_control_demos

./: .gitignore
ros2_control_demo_description/: CMakeLists.txt
ros2_control_demo_description/stark_hand/rviz/: stark_hand.rviz
ros2_control_demo_description/stark_hand/urdf/: stark_hand.materials.xacro  stark_hand_description.urdf.xacro
ros2_control_demos/: package.xml
ros2_control_stark/: CMakeLists.txt  README.md  package.xml  ros2_control_stark.xml
ros2_control_stark/bringup/config/: rrbot_controllers.yaml  rrbot_forward_position_publisher.yaml  rrbot_joint_trajectory_publisher.yaml
ros2_control_stark/bringup/launch/: stark.launch.py  test_forward_position_controller.launch.py  test_joint_trajectory_controller.launch.py
ros2_control_stark/description/launch/: view_robot.launch.py
ros2_control_stark/description/ros2_control/: stark_hand.ros2_control.xacro
ros2_control_stark/description/urdf/: stark_hand.urdf.xacro
ros2_control_stark/hardware/include/ros2_control_stark/: stark_hand.hpp
ros2_control_stark/hardware/src/: stark_hand.cpp
stark_ethercat/revo2_ethercat_driver_ros2/: CMakeLists.txt  README.md  package.xml  revo2_plugins.xml
stark_ethercat/revo2_ethercat_driver_ros2/config/: joint_controllers.yaml
stark_ethercat/revo2_ethercat_driver_ros2/description/config/: revo2_system.config.xacro
stark_ethercat/revo2_ethercat_driver_ros2/description/ros2_control/: revo2_system.ros2_control.xacro
stark_ethercat/revo2_ethercat_driver_ros2/include/revo2_ethercat_plugins/: execute_command.hpp  logger_macros.hpp  revo2_joints_system_slave.hpp
stark_ethercat/revo2_ethercat_driver_ros2/launch/: revo2_system.launch.py
stark_ethercat/revo2_ethercat_driver_ros2/scripts/: test_revo2_ethercat.py
stark_ethercat/revo2_ethercat_driver_ros2/src/: revo2_joints_system_slave.cpp
stark_ethercat/stark_ethercat_driver/: CMakeLists.txt  ethercat_driver_plugin.xml  package.xml
stark_ethercat/stark_ethercat_driver/include/stark_ethercat_driver/: stark_ethercat_driver.hpp
stark_ethercat/stark_ethercat_driver/src/: stark_ethercat_driver.cpp
stark_ethercat/stark_ethercat_interface/: CMakeLists.txt  package.xml
stark_ethercat/stark_ethercat_interface/include/stark_ethercat_interface/: ec_master.hpp  ec_pdo_channel_manager.hpp  ec_sdo_manager.hpp  ec_slave.hpp  ec_sync_manager.hpp
stark_ethercat/stark_ethercat_interface/src/: ec_master.cpp
stark_ethercat/stark_ethercat_interface/test/: test_ec_pdo_channel_manager.cpp
